# rhw_driver

./: .gitignore  REQUIREMENTS.md  launch.bash  requirements.txt
common/: __init__.py  api_contract.py  isapi_client.py  preview_manager.py  ptz_controller.py  request_validation.py  ros2_bridge_core.py  runtime_state.py
common/inference/: __init__.py  contracts.py  inference_runner.py  output_schema.py  yolo_adapters.py  yolo_registry.py
docs/superpowers/plans/: 2026-05-14-vision-album-model-bt.md
docs/superpowers/specs/: 2026-05-14-vision-album-model-bt-design.md
rhw_firedog_voice/: package.xml  readme.txt  setup.cfg  setup.py
rhw_firedog_voice/logs/: asr_demo_log.jsonl
rhw_firedog_voice/rhw_firedog_voice/: __init__.py  asr_intent_demonew.py  asr_intent_live.py  voice_control_node.py
rhw_firedog_voice/scripts/: asr_intent_demonew.py
rhw_firedog_voice/test_audio/: test.wavv
rhw_map_manager/: README.md  package.xml  setup.cfg  setup.py
rhw_map_manager/config/: map_manager.yaml
rhw_map_manager/launch/: map_manager.launch.py
rhw_map_manager/rhw_map_manager/: map_manager_node.py
rhw_model_scheduler_ws/: AGENTS.md  README.md
rhw_model_scheduler_ws/models/current/: manifest.json
rhw_model_scheduler_ws/src/rhw_model_scheduler/: package.xml  setup.cfg  setup.py
rhw_model_scheduler_ws/src/rhw_model_scheduler/resource/: rhw_model_scheduler
rhw_model_scheduler_ws/src/rhw_model_scheduler/rhw_model_scheduler/: __init__.py  api_contract.py  contracts.py  export_tensorrt.py  gauge_adapter.py  latency_benchmark.py  model_scheduler_node.py  rtsp_frame_source.py  rust_seg_utils.py  scheduler_core.py  smoke_client.py  workspace.py  yolo_adapters.py  yolo_registry.py
rhw_model_scheduler_ws/src/rhw_model_scheduler/tests/: test_ros_helpers.py  test_scheduler_core.py
rhw_msgs/: CMakeLists.txt  package.xml
rhw_msgs/msg/: InspectionAlbumReport.msg  MissionStatus.msg  ModeState.msg  NavigationStatus.msg  PtzStatus.msg  RobotHardwreStatus.msg  RobotHardwreStatus.msg.init  RobotPosition.msg  SetCostmaps.msg  SetRegion.msg  UdpBasicStatus.msg  UdpBatteryStatus.msg  UdpMotionStatus.msg  Ultrasonic.msg  Version.msg  WaypointTask.msg
rhw_msgs/srv/: AddWaypoint.srv  Cancel.srv  CaptureImage.srv  DeleteMap.srv  DeleteWaypoint.srv  DisRecharge.srv  GetMapList.srv  GetWaypoints.srv  Goal.srv  InitialPose.srv  InspectionAlbumUpload.srv  LoadMap.srv  ModelTaskRun.srv  PathIsValid.srv  Pause.srv  PauseMission.srv  PtzAbsoluteMove.srv  PtzControl.srv  PtzGetPosition.srv  PtzGotoPreset.srv  PtzPatrol.srv  Recharge.srv  SaveMap.srv  StartMission.srv  StopMission.srv  SwitchMode.srv
rhw_ptz_controller/: README.md  package.xml  setup.cfg  setup.py
rhw_ptz_controller/config/: ptz_controller.yaml
rhw_ptz_controller/launch/: ptz_controller.launch.py
rhw_ptz_controller/rhw_ptz_controller/: camera_publisher_node.py  ptz_controller.py  ptz_controller_node.py
rhw_task_scheduler/: README.md  package.xml  setup.cfg  setup.py
rhw_task_scheduler/config/: task_scheduler.yaml
rhw_task_scheduler/launch/: mission_test.launch.py  task_scheduler.launch.py
rhw_task_scheduler/rhw_task_scheduler/: __init__.py  bt_utils.py  bt_web_viewer.py  debug_tools.py  mission_bt_node.py  mission_test_mocks.py  mock_mission_runner.py  mock_service_responder.py  service_audit.py  waypoint_manager.py
rhw_task_scheduler/rhw_task_scheduler/bt_actions/: __init__.py  charge_action.py  condition_nodes.py  follow_path_action.py  inference_action.py  navigate_action.py  ptz_actions.py  vision_actions.py
rhw_udp_mqtt_bridge/: MQTT消息格式确认文档.md  README.md  package.xml  setup.cfg  setup.py
rhw_udp_mqtt_bridge/config/: udp_mqtt_bridge.yaml
rhw_udp_mqtt_bridge/launch/: PLACEHOLDER.txt  udp_bridge.launch.py
rhw_udp_mqtt_bridge/rhw_udp_mqtt_bridge/: __init__.py  album_payload.py  inspection_reporter_node.py  mqtt_forwarder_node.py  mqtt_gateway_node.py  udp_bridge_node.py
rhw_udp_mqtt_bridge/tests/: test_album_payload.py
