<?xml version="1.0"?>
<package format="3">
  <name>rhw_firedog_voice</name>
  <version>0.0.0</version>
  <description>Offline voice command recognition and ROS 2 topic publishing based on Vosk.</description>
  <maintainer email="xwqf@todo.todo">xwqf</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
