<?xml version="1.0"?>
<package format="3">
  <name>rhw_ptz_controller</name>
  <version>0.0.0</version>
  <description>ROS 2 node wrapping ISAPI PTZ camera control.</description>
  <maintainer email="xwqf@todo.todo">xwqf</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rhw_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
