<?xml version="1.0"?>
<package format="3">
  <name>rhw_task_scheduler</name>
  <version>0.1.0</version>
  <description>行为树驱动的航点任务调度系统：点位管理 + 巡检任务执行</description>
  <maintainer email="xwqf@todo.todo">xwqf</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rhw_msgs</depend>

  <exec_depend>py_trees</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
