<?xml version="1.0"?>
<package format="3">
  <name>rhw_udp_mqtt_bridge</name>
  <version>0.0.0</version>
  <description>ROS 2 package skeleton for UDP parsing, ROS topic publishing and MQTT forwarding.</description>
  <maintainer email="xwqf@todo.todo">xwqf</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rhw_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-paho-mqtt</exec_depend>
  <exec_depend>python3-cryptography</exec_depend>
  <exec_depend>python3-requests</exec_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
