<?xml version="1.0"?>
<package format="3">
  <name>rhw_model_scheduler</name>
  <version>0.1.0</version>
  <description>Standalone ROS2 model scheduler service for YOLO model tasks.</description>
  <maintainer email="codex@example.com">Codex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rhw_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
